--- a/calculator2/Base.lproj/Main.storyboard
+++ b/calculator2/Base.lproj/Main.storyboard
@@ -25,8 +25,7 @@
                                         <fontDescription key="fontDescription" type="system" pointSize="37"/>
                                         <textInputTraits key="textInputTraits" keyboardType="numbersAndPunctuation" returnKeyType="go" enablesReturnKeyAutomatically="YES"/>
                                         <connections>
-                                            <action selector="calculate" destination="BYZ-38-t0r" eventType="primaryActionTriggered" id="Uen-EM-KMv"/>
-                                            <action selector="reset" destination="BYZ-38-t0r" eventType="touchUpInside" id="JHF-cp-G9E"/>
+                                            <action selector="calculateAction" destination="BYZ-38-t0r" eventType="primaryActionTriggered" id="Hd9-gP-p9Y"/>
                                         </connections>
                                     </textField>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="infoDark" showsTouchWhenHighlighted="YES" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Da0-04-mBz">
@@ -54,7 +53,7 @@
                     </view>
                     <connections>
                         <outlet property="holder" destination="Bw5-N6-Xys" id="BPm-Dk-axm"/>
-                        <outlet property="textInput" destination="P0g-Fp-Y2T" id="Ss7-lw-Qpa"/>
+                        <outlet property="textInput" destination="P0g-Fp-Y2T" id="ihv-nH-vOU"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
