--- a/calculator2/Base.lproj/Main.storyboard
+++ b/calculator2/Base.lproj/Main.storyboard
@@ -18,10 +18,12 @@
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Bw5-N6-Xys">
                                 <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                                 <subviews>
-                                    <textField opaque="NO" contentMode="scaleToFill" fixedFrame="YES" selected="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="MATH" textAlignment="right" clearsOnBeginEditing="YES" minimumFontSize="37" clearButtonMode="always" translatesAutoresizingMaskIntoConstraints="NO" id="P0g-Fp-Y2T">
-                                        <rect key="frame" x="85" y="160" width="244" height="54"/>
-                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                    <textField opaque="NO" contentMode="scaleToFill" selected="YES" contentHorizontalAlignment="leading" contentVerticalAlignment="center" borderStyle="bezel" placeholder="MATH" textAlignment="right" clearsOnBeginEditing="YES" adjustsFontForContentSizeCategory="YES" minimumFontSize="25" clearButtonMode="always" translatesAutoresizingMaskIntoConstraints="NO" id="P0g-Fp-Y2T">
+                                        <rect key="frame" x="45" y="130" width="324" height="200"/>
                                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="200" id="d5j-ay-4xm"/>
+                                        </constraints>
                                         <fontDescription key="fontDescription" type="system" pointSize="37"/>
                                         <textInputTraits key="textInputTraits" keyboardType="numbersAndPunctuation" returnKeyType="go" enablesReturnKeyAutomatically="YES"/>
                                         <connections>
@@ -31,19 +33,22 @@
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="infoDark" showsTouchWhenHighlighted="YES" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Da0-04-mBz">
                                         <rect key="frame" x="344" y="50" width="20" height="20"/>
                                         <connections>
-                                            <action selector="info:" destination="BYZ-38-t0r" eventType="touchUpInside" id="SSz-QI-fgQ"/>
+                                            <action selector="infoButtonAction:" destination="BYZ-38-t0r" eventType="touchUpInside" id="itw-bw-Ml1"/>
                                         </connections>
                                     </button>
                                 </subviews>
                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <constraints>
+                                    <constraint firstItem="P0g-Fp-Y2T" firstAttribute="leading" secondItem="Bw5-N6-Xys" secondAttribute="leading" constant="45" id="jy7-Ps-ycv"/>
                                     <constraint firstItem="Da0-04-mBz" firstAttribute="top" secondItem="Bw5-N6-Xys" secondAttribute="top" constant="50" id="oRQ-by-iq2"/>
                                     <constraint firstAttribute="trailing" secondItem="Da0-04-mBz" secondAttribute="trailing" constant="50" id="rLb-yf-YKs"/>
+                                    <constraint firstAttribute="trailing" secondItem="P0g-Fp-Y2T" secondAttribute="trailing" constant="45" id="wZH-RA-acP"/>
+                                    <constraint firstItem="P0g-Fp-Y2T" firstAttribute="top" secondItem="Da0-04-mBz" secondAttribute="bottom" constant="60" id="xB3-mv-js4"/>
                                 </constraints>
                             </view>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
-                        <color key="backgroundColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
                             <constraint firstItem="Bw5-N6-Xys" firstAttribute="trailing" secondItem="6Tk-OE-BBY" secondAttribute="trailing" id="8if-MK-42Q"/>
                             <constraint firstItem="Bw5-N6-Xys" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="EgH-9v-mHZ"/>
